--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
+    "react-spring-lightbox": "^1.7.1",
     "sass": "^1.62.1"
   }
 }
